# OpenTime

./: .dockerignore  .gitignore  .mcp.json  404.html  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
dashboard/: index.html
docs/: dashboard.md  getting-started.md  index.md  roadmap.md
docs/guides/: prompt-templates.md  team-setup.md
docs/integrations/: docker.md  langchain.md  mcp.md  openai-gemini.md  rest-api.md
docs/integrations/hooks/: amazon-q.md  claude-code.md  cline.md  copilot.md  cursor.md  index.md  windsurf.md
docs/reference/: api-endpoints.md  configuration.md  mcp-tools.md
getting-started/: index.html
guides/prompt-templates/: index.html
guides/team-setup/: index.html
integrations/docker/: index.html
integrations/hooks/: index.html
integrations/hooks/amazon-q/: index.html
integrations/hooks/claude-code/: index.html
integrations/hooks/cline/: index.html
integrations/hooks/copilot/: index.html
integrations/hooks/cursor/: index.html
integrations/hooks/windsurf/: index.html
integrations/langchain/: index.html
integrations/mcp/: index.html
integrations/openai-gemini/: index.html
integrations/rest-api/: index.html
reference/api-endpoints/: index.html
reference/configuration/: index.html
reference/mcp-tools/: index.html
roadmap/: index.html
search/: search_index.json
src/opentime/: __init__.py
src/opentime/core/: clock.py  events.py  stats.py
src/opentime/db/: connection.py  queries.py  schema.py
tests/: conftest.py
tests/core/: test_clock.py  test_events.py  test_stats.py
tests/db/: test_connection.py  test_queries.py
tests/hooks/: test_adapters.py  test_claude_code.py
tests/mcp_server/: test_server.py
tests/rest_api/: test_app.py
(+9 files in other folders)
