[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentime"
version = "0.1.0"
description = "Temporal awareness and time-effort estimation for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ian-c-hamilton" },
]
keywords = ["ai", "agents", "time", "mcp", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
rest = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "opentime[rest,dev]",
]

[project.scripts]
opentime-mcp = "opentime.mcp_server.server:run"
opentime-rest = "opentime.rest_api.app:main"

[project.urls]
Homepage = "https://github.com/transparentai-tech/OpenTime"
Repository = "https://github.com/transparentai-tech/OpenTime"
Issues = "https://github.com/transparentai-tech/OpenTime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/opentime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
